# CGraphics

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/_apps/: CMakeLists.txt  common.cmake
src/_apps/image_loader/: CMakeLists.txt  image_loader.c  image_loader.h  main.c
src/_apps/ray_tracer/: CMakeLists.txt  geometric_object.h  main.c  normal.h  point.h  ray.h  real.h  rgb.h  vector.h  view_plane.h  world.c
src/app/: CMakeLists.txt  app.c  app.h  graph_app.c  graph_app.h  screen.h
src/graphics_utils/: CMakeLists.txt  common.h  font.c  font.h  input_keys.h  screen_callback.h  screen_info.c  screen_info.h  screen_info_p.h  screen_info_rgb.c  screen_info_rgb.h  screen_info_rgb_p.h  screen_settings.h
src/graphics_x11/: CMakeLists.txt  screen_info_rgb.c  screen_info_rgb.h  screen_x11.c  screen_x11.h
src/lib/: graph_app.h
src/screen_x11/: CMakeLists.txt  screen.c  screen.h  screen_info_rgb_p.h  screen_x11.c  screen_x11.h
src/stb_lib/: stb_truetype.h
